--- a/index.html
+++ b/index.html
@@ -1,23 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mesto</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="page">
-  <section class="popup">
-    <div class="popup__wrapper">
-      <form class="popup__container">
-        <fieldset class="popup__input-container">
-          <legend class="popup__header">Редактировать профиль</legend>
-          <input type="text" class="popup__input popup__input_content_name">
-          <input type="text" class="popup__input popup__input_content_description">
-        </fieldset>
-        <button type="submit" class="popup__save-button">Сохранить</button>
-      </form>
-      <img src="images/Close Icon.svg" alt="Закрыть форму" class="popup__close-icon">
-    </div>
-  </section>
+  <header class="header">
+    <div class="header__logo"></div>
+  </header>
+  <main class="content">
+    <section class="popup popup_opened">
+      <div class="popup__wrapper">
+        <form class="popup__container">
+          <fieldset class="popup__input-container">
+            <legend class="popup__header">Редактировать профиль</legend>
+            <input type="text" class="popup__input popup__input_content_name">
+            <input type="text" class="popup__input popup__input_content_description">
+          </fieldset>
+          <button type="submit" class="popup__save-button">Сохранить</button>
+        </form>
+        <img src="images/Close Icon.svg" alt="Закрыть форму" class="popup__close-icon">
+      </div>
+    </section>
+    <section class="profile">
+      <div class="profile__picture"></div>
+      <ul class="profile__info">
+        <li class="profile__name-wrapper">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button type="submit" class="profile__edit-button"></button>
+        </li>
+        <li>
+          <p class="profile__description">Исследователь океана</p>
+        </li>
+      </ul>
+      <button type="submit" class="profile__add-button"></button>
+    </section>
+    <section class="cards">
+      <ul class="cards__list">
+        <li class="cards__item">
+          <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
+          <div class="cards__caption">
+            <h2 class="cards__title">Карачаевск</h2>
+            <button type="submit" class="cards__like-button"></button>
+          </div>
+        </li>
+        <li class="cards__item">
+          <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
+          <div class="cards__caption">
+            <h2 class="cards__title">Гора Эльбрус</h2>
+            <button type="submit" class="cards__like-button"></button>
+          </div>
+        </li>
+        <li class="cards__item">
+          <img src="images/Dombai.jpg" alt="Домбай" class="cards__image">
+          <div class="cards__caption">
+            <h2 class="cards__title">Домбай</h2>
+            <button type="submit" class="cards__like-button"></button>
+          </div>
+        </li>
+        <li class="cards__item">
+          <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
+          <div class="cards__caption">
+            <h2 class="cards__title">Гора Эльбрус</h2>
+            <button type="submit" class="cards__like-button"></button>
+          </div>
+        </li>
+        <li class="cards__item">
+          <img src="images/Dombai.jpg" alt="Домбай" class="cards__image">
+          <div class="cards__caption">
+            <h2 class="cards__title">Домбай</h2>
+            <button type="submit" class="cards__like-button"></button>
+          </div>
+        </li>
+        <li class="cards__item">
+          <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
+          <div class="cards__caption">
+            <h2 class="cards__title">Карачаево-Ч...</h2>
+            <button type="submit" class="cards__like-button"></button>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+  </footer>
 </body>
 </html>
