--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="header__logo"></div>
   </header>
   <main class="content">
-    <section class="popup popup_opened">
+    <section class="popup">
       <div class="popup__wrapper">
         <form class="popup__container">
           <fieldset class="popup__input-container">
-            <legend class="popup__header">Редактировать профиль</legend>
+            <legend class="popup__title">Редактировать профиль</legend>
             <input type="text" class="popup__input popup__input_content_name">
             <input type="text" class="popup__input popup__input_content_description">
           </fieldset>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
-        <img src="images/Close Icon.svg" alt="Закрыть форму" class="popup__close-icon">
+        <button type="submit" class="popup__close-button"></button>
       </div>
     </section>
     <section class="profile">
@@ -77,7 +77,7 @@
         <li class="cards__item">
           <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
           <div class="cards__caption">
-            <h2 class="cards__title">Карачаево-Ч...</h2>
+            <h2 class="cards__title">Карачаево-Черкессия</h2>
             <button type="submit" class="cards__like-button"></button>
           </div>
         </li>
@@ -87,5 +87,6 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
+  <script src="scripts.js"></script>
 </body>
 </html>
