feat: добавление карточек через JS

--- a/index.html
+++ b/index.html
@@ -24,48 +24,7 @@
       </section>
       <section class="cards">
         <ul class="cards__list">
-          <li class="cards__item">
-            <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
-            <div class="cards__caption">
-              <h3 class="cards__title">Карачаевск</h3>
-              <button type="button" class="cards__like-button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
-            <div class="cards__caption">
-              <h3 class="cards__title">Гора Эльбрус</h3>
-              <button type="button" class="cards__like-button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Dombai.jpg" alt="Домбай" class="cards__image">
-            <div class="cards__caption">
-              <h3 class="cards__title">Домбай</h3>
-              <button type="button" class="cards__like-button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
-            <div class="cards__caption">
-              <h3 class="cards__title">Гора Эльбрус</h3>
-              <button type="button" class="cards__like-button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Dombai.jpg" alt="Домбай" class="cards__image">
-            <div class="cards__caption">
-              <h3 class="cards__title">Домбай</h3>
-              <button type="button" class="cards__like-button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
-            <div class="cards__caption">
-              <h3 class="cards__title">Карачаево-Черкессия</h3>
-              <button type="button" class="cards__like-button"></button>
-            </div>
-          </li>
+
         </ul>
       </section>
     </main>
@@ -85,6 +44,15 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </section>
+    <template id="card">
+      <li class="cards__item">
+        <img src="" class="cards__image" alt="">
+        <div class="cards__caption">
+          <h3 class="cards__title"></h3>
+          <button type="button" class="cards__like-button"></button>
+        </div>
+      </li>
+    </template>
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
