feat: добавление карточек через попап

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <form name="form" class="popup__form">
           <fieldset class="popup__input-container">
             <legend class="popup__title">Новое место</legend>
-            <input name="user-name" type="text" class="popup__input" placeholder="Название">
-            <input name="user-job" type="text" class="popup__input" placeholder="Ссылка на картинку">
+            <input name="place-title" type="text" class="popup__input" placeholder="Название">
+            <input name="place-link" type="text" class="popup__input" placeholder="Ссылка на картинку">
           </fieldset>
-          <button type="submit" class="popup__save-button">Сохранить</button>
+          <button type="submit" class="popup__save-button">Создать</button>
         </form>
         <button type="button" class="popup__close-button"></button>
       </div>
