feat: удаление карточек

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <h3 class="cards__title"></h3>
           <button type="button" class="cards__like-button"></button>
         </div>
+        <div class="cards__trash-button"></div>
       </li>
     </template>
     <script src="scripts/scripts.js"></script>
