--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
+
+    <!--TODO: сделать каждый попап отдельным блоком-->
     <section class="popup popup_use_edit-profile">
       <div class="popup__wrapper">
         <form name="form" class="popup__form">
@@ -43,6 +45,7 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </section>
+
     <section class="popup popup_use_add-place">
       <div class="popup__wrapper">
         <form name="form" class="popup__form">
@@ -56,6 +59,17 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </section>
+
+    <section class="popup popup_use_show-place-picture popup_opened">
+      <div class="popup__picture-container">
+        <figure class="popup__picture-wrapper">
+          <img src="images/ivanovo.jpg" alt="" class="popup__picture">
+          <figcaption class="popup__picture-caption">Молчат домааааааааааааыыыаыааыпыпыпппыыппыпыпыпыыпыпыпыпыпыпыпыпыпыппыпыыпып</figcaption>
+        </figure>
+        <button type="button" class="popup__close-button"></button>
+      </div>
+    </section>
+
     <template id="card">
       <li class="cards__item">
         <img src="" class="cards__image" alt="">
