fix: небольшой фикс

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="popup picture-modal">
       <div class="picture-modal__container">
         <figure class="picture-modal__picture-wrapper">
-          <img src="" alt="" class="picture-modal__picture">
+          <img alt="" class="picture-modal__picture">
           <figcaption class="picture-modal__caption"></figcaption>
         </figure>
         <button type="button" class="popup__close-button picture-modal__close-button"></button>
@@ -69,7 +69,7 @@
 
     <template id="card">
       <li class="cards__item">
-        <img src="" class="cards__image" alt="">
+        <img class="cards__image" alt="">
         <div class="cards__caption">
           <h3 class="cards__title"></h3>
           <button type="button" class="cards__like-button"></button>
