--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <div class="cards__trash-button"></div>
       </li>
     </template>
+    <script src="scripts/cards.js"></script>
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
