fix: исправления в соответствии с комментариями ревьюера

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section class="popup popup_use_edit-profile">
       <div class="popup__wrapper">
         <form name="editProfile" class="popup__form" novalidate>
+          <h3 class="popup__title">Редактировать профиль</h3>
           <fieldset class="popup__input-container">
-            <label class="popup__title">Редактировать профиль</label>
             <input id="name-input"
                    type="text"
                    class="popup__input popup__input_content_user-name"
@@ -58,8 +58,8 @@
     <section class="popup popup_use_add-place">
       <div class="popup__wrapper">
         <form name="addPlace" class="popup__form" novalidate>
+          <h3 class="popup__title">Новое место</h3>
           <fieldset class="popup__input-container">
-            <legend class="popup__title">Новое место</legend>
             <input id="title-input"
                    type="text"
                    class="popup__input popup__input_content_place-title"
