--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@
         <div class="cards__trash-button"></div>
       </li>
     </template>
-    <script src="scripts/cards.js"></script>
-    <script src="scripts/scripts.js"></script>
-    <script src="scripts/validate.js"></script>
+    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
