fix: были перепутаны названия классов в разметке

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                    class="popup__input popup__input_content_user-desc"
                    minlength="2" maxlength="200"
                    required>
-            <span class="job-input-error popup__input-error"></span>
+            <span class="desc-input-error popup__input-error"></span>
           </fieldset>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
