--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,10 @@
         <img class="cards__image" alt="">
         <div class="cards__caption">
           <h3 class="cards__title"></h3>
-          <button aria-label="Оценить" type="button" class="cards__like-button"></button>
+          <div class="cards__like-wrapper">
+            <button aria-label="Оценить" type="button" class="cards__like-button"></button>
+            <p class="cards__like-counter">5</p>
+          </div>
         </div>
         <div aria-label="Удалить изображение" class="cards__trash-button"></div>
       </li>
