add: ховер на аватар

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="<%=require('./images/Custo.jpg')%>" alt="Custo" class="profile__picture">
+        <div class="profile__avatar-wrapper">
+          <img class="profile__picture" src="<%=require('./images/Custo.jpg')%>" alt="Custo">
+        </div>
         <div class="profile__info">
           <div class="profile__name-wrapper">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
