--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-wrapper">
-          <img class="profile__picture" src="<%=require('./images/Custo.jpg')%>" alt="Custo">
+          <img class="profile__avatar" src="<%=require('./images/Custo.jpg')%>" alt="Custo">
         </div>
         <div class="profile__info">
           <div class="profile__name-wrapper">
