refactor: в попап врапере зачем то был min height

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,12 @@
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
 
+    <section class="popup popup_use_edit-avatar">
+      <div class="popup__wrapper">
+
+      </div>
+    </section>
+
     <section class="popup popup_use_edit-profile">
       <div class="popup__wrapper">
         <form name="editProfile" class="popup__form" novalidate>
