add: подгрузка профиля с сервера

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-wrapper">
-          <img class="profile__avatar" src="<%=require('./images/Custo.jpg')%>" alt="Custo">
+          <img class="profile__avatar" src="" alt="Custo">
         </div>
         <div class="profile__info">
           <div class="profile__name-wrapper">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <p class="profile__desc">Исследователь океана</p>
+            <h1 class="profile__name"></h1>
+            <p class="profile__desc"></p>
           </div>
           <button aria-label="Изменить данные профиля" type="button" class="profile__edit-user-button"></button>
         </div>
@@ -82,7 +82,7 @@
           <h3 class="popup__title">Новое место</h3>
           <fieldset class="popup__input-container">
             <input id="title-input"
-                   name="title"
+                   name="name"
                    type="text"
                    class="popup__input popup__input_content_place-title"
                    placeholder="Название"
