add: редактирование аватарки

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
           <h3 class="popup__title">Обновить аватар</h3>
           <fieldset class="popup__input-container">
             <input id="avatar-link-input"
-                   name="avatar-link"
-                   type="text"
+                   name="link"
+                   type="url"
                    class="popup__input popup__input_content_avatar-link"
                    required>
             <span class="avatar-link-input-error popup__input-error"></span>
