add: данные по лайкам

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-wrapper">
-          <img class="profile__avatar" src="" alt="Custo">
+          <img class="profile__avatar" src="" alt="аватар">
         </div>
         <div class="profile__info">
           <div class="profile__name-wrapper">
@@ -128,7 +128,7 @@
           <h3 class="cards__title"></h3>
           <div class="cards__like-wrapper">
             <button aria-label="Оценить" type="button" class="cards__like-button"></button>
-            <p class="cards__like-counter">5</p>
+            <p class="cards__like-counter"></p>
           </div>
         </div>
         <div aria-label="Удалить изображение" class="cards__trash-button"></div>
