удаление карточек через попап

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,19 @@
             <p class="cards__like-counter"></p>
           </div>
         </div>
+      </li>
+    </template>
+
+    <template id="personal-card">
+      <li class="cards__item">
+        <img class="cards__image" alt="">
+        <div class="cards__caption">
+          <h3 class="cards__title"></h3>
+          <div class="cards__like-wrapper">
+            <button aria-label="Оценить" type="button" class="cards__like-button"></button>
+            <p class="cards__like-counter"></p>
+          </div>
+        </div>
         <div aria-label="Удалить изображение" class="cards__trash-button"></div>
       </li>
     </template>
