refactor: небольшие фиксы

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,7 @@
             <p class="cards__like-counter"></p>
           </div>
         </div>
+        <button aria-label="Удалить изображение" class="cards__trash-button"></button>
       </li>
     </template>
 
